[package]
name = "echo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
socket2 = { version = "0.4.6", features = ["all"] }
tokio = { version = "1.20.1", features = ["full"] }
