[package]
name = "echo_server"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.15.0"
socket2 = { version = "0.5.1", features = ["all"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
